# FastAPI_Suren

./: .gitignore  crud.py  db.sqlite3  main.py  pyproject.toml  url_git_suren_cod.txt
alembic/: env.py
alembic/versions/: 2024_05_24_1901-4de92aae3196_init.py  2024_05_24_1915-23e3bc2fabbc_creat_users_table.py  2024_05_24_1934-fdbdf10778c5_creat_posts_table.py  2024_05_24_2132-0e2d764455d6_creat_profile_table.py  2024_06_23_2031-6badf68682a7_create_orders_table.py  2024_06_23_2108-b6bb3b78efed_create_order_product_association_table.py  2024_06_25_2245-851aaa253368_add_column_count_to_opa.py  2024_06_26_2118-f7659c852992_add_column_unit_price.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_aut.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
serts/: utils.py
users/: schemas.py
